IMPALA-1799: Correctly populate HS2 result type metadata for VARCHAR.

The bug was that VARCHAR was handled in the wrong case within
a switch on the result type. As a result, the HS2 type qualifiers
were not populated. This issue manifested itself from ODBC/JDBC as
reporting 32767 as the max length of any VARCHAR type in query results.

Change-Id: Ieffff1f51a23472b2b97ae53d8148e1cb209f5b8
Reviewed-on: http://gerrit.cloudera.org:8080/66
Reviewed-by: Alex Behm <alex.behm@cloudera.com>
Tested-by: Internal Jenkins